Fixed the test and added another one that is equivalent to how platform tests are configured